--- a/templates/index.html
+++ b/templates/index.html
@@ -4,13 +4,16 @@
     <title>Chat Box</title>
     <link rel="stylesheet" href="static/style.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script>
       // Send the user's question to the server and display the response
       function sendQuestion() {
         var question = $("#question-input").val();
         if (question) {
           var timestamp = new Date().toLocaleTimeString();
-          $("#chat-area").append("<div class='message user-message'><span class='timestamp'>" + timestamp + "</span>" + question + "</div>");
+          $("#chat-area").append("<div class='container message user-message'><div class='row'><div class='col-lg'><span class='timestamp'>" + timestamp + "</span></div></div><div class='row'><div class='w-100'><span>" + question + "<span></div></div></div>");
+         
+          // <div class='message user-message'><span class='timestamp'>" + timestamp + "</span>" + question + "</div>");
           $("#question-input").val("");
           $("#chat-area").scrollTop($("#chat-area").prop("scrollHeight"));
           $("#loading-indicator").show();
@@ -34,7 +37,9 @@
                   var timestamp = new Date().toLocaleTimeString();
                   $("#typing-indicator").html("");
                   var response = data.response.replace(/\n/g, "<br>");
-                  $("#chat-area").append('<div class="message bot-message"><span class="timestamp">' + timestamp + '</span>' + response.replace(/\n/g, '<br><br>').replace(/(https?:\/\/[^\s]+)/g, '<a href="$1" target="_blank">$1</a>') + '</div>');
+                  $("#chat-area").append("<div class='container message bot-message'><div class='row'><div class='col-lg'><span class='timestamp'>" + timestamp + "</span></div></div><div class='row'><div class='w-100'><span>" + response.replace(/\n/g, "<br><br>").replace(/(https?:\/\/[^\s]+)/g, "<a href='$1' target='_blank'>$1</a>") + "<span></div></div></div>");
+                  
+                  // <div class="message bot-message"><span class="timestamp">' + timestamp + '</span>' + response.replace(/\n/g, '<br><br>').replace(/(https?:\/\/[^\s]+)/g, '<a href="$1" target="_blank">$1</a>') + '</div>');
                   $("#chat-area").scrollTop($("#chat-area").prop("scrollHeight"));
                   $("#loading-indicator").hide();
                 }
