--- a/templates/index.html
+++ b/templates/index.html
@@ -11,9 +11,19 @@
         var question = $("#question-input").val();
         if (question) {
           var timestamp = new Date().toLocaleTimeString();
-          $("#chat-area").append("<div class='container message user-message'><div class='row'><div class='col-lg'><span class='timestamp'>" + timestamp + "</span></div></div><div class='row'><div class='w-100'><span>" + question + "<span></div></div></div>");
-         
-          // <div class='message user-message'><span class='timestamp'>" + timestamp + "</span>" + question + "</div>");
+          $("#chat-area").append("\
+          <div class='container message user-message'>\
+            <div class='row'>\
+              <div class='col-lg'>\
+                <span class='timestamp'>" + timestamp + "</span>\
+              </div>\
+            </div>\
+            <div class='row'>\
+              <div class='w-100'>\
+                <span>" + question + "<span>\
+              </div>\
+            </div>\
+          </div>");
           $("#question-input").val("");
           $("#chat-area").scrollTop($("#chat-area").prop("scrollHeight"));
           $("#loading-indicator").show();
@@ -37,9 +47,19 @@
                   var timestamp = new Date().toLocaleTimeString();
                   $("#typing-indicator").html("");
                   var response = data.response.replace(/\n/g, "<br>");
-                  $("#chat-area").append("<div class='container message bot-message'><div class='row'><div class='col-lg'><span class='timestamp'>" + timestamp + "</span></div></div><div class='row'><div class='w-100'><span>" + response.replace(/\n/g, "<br><br>").replace(/(https?:\/\/[^\s]+)/g, "<a href='$1' target='_blank'>$1</a>") + "<span></div></div></div>");
-                  
-                  // <div class="message bot-message"><span class="timestamp">' + timestamp + '</span>' + response.replace(/\n/g, '<br><br>').replace(/(https?:\/\/[^\s]+)/g, '<a href="$1" target="_blank">$1</a>') + '</div>');
+                  $("#chat-area").append("\
+                    <div class='container message bot-message'>\
+                      <div class='row'>\
+                        <div class='col-lg'>\
+                          <span class='timestamp'>" + timestamp + "</span>\
+                        </div>\
+                      </div>\
+                      <div class='row'>\
+                        <div class='w-100'>\
+                          <span>" + response.replace(/\n/g, "<br><br>").replace(/(https?:\/\/[^\s]+)/g, "<a href='$1' target='_blank'>$1</a>") + "<span>\
+                        </div>\
+                      </div>\
+                    </div>");
                   $("#chat-area").scrollTop($("#chat-area").prop("scrollHeight"));
                   $("#loading-indicator").hide();
                 }
