--- a/static/style.css
+++ b/static/style.css
@@ -56,11 +56,6 @@ body {
     font-size: 16px;
     white-space: pre-wrap;
   }
-
-  .user-message a {
-    color: #007aff;
-    text-decoration: underline;
-  }
   
   .bot-message {
     background-color: #fff;
@@ -87,6 +82,8 @@ body {
   }
 
   .timestamp {
+    display: flex;
+    justify-content: space-between;
     font-size: 12px;
     color: #999;
     margin-right: 5px;
