--- a/static/style.css
+++ b/static/style.css
@@ -60,7 +60,6 @@ body {
   .bot-message {
     background-color: #fff;
     color: #000;
-    align-self: flex-start;
     text-align: left;
     margin-bottom: 10px;
     border-radius: 10px 10px 10px 0;
@@ -69,6 +68,7 @@ body {
     max-width: 70%;
     font-size: 16px;
     white-space: pre-wrap;
+    float: right;
   }
 
   .bot-message a {
@@ -87,6 +87,14 @@ body {
     font-size: 12px;
     color: #999;
     margin-right: 5px;
+  }
+
+  .bot-timestamp {
+    justify-content: space-between;
+    font-size: 12px;
+    color: #999;
+    margin-right: 5px;
+    text-align: right;
   }
 
   .w-100 {
