--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,7 @@
 /* Set a modern font and background color */
 body {
     font-family: 'Roboto', sans-serif;
-    background-color: #f2f2f2;
+    background-color: #f1f9ff;
   }
   
   /* Center the chat box */
@@ -9,7 +9,7 @@ body {
     margin: 0 auto;
     max-width: 500px;
     padding: 20px;
-    background-color: #f2f2f2;
+    background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
     position: absolute;
@@ -44,8 +44,8 @@ body {
   }
   
   .user-message {
-    background-image: linear-gradient(to bottom right, #1565C0, #0D47A1);
-    color: #fff;
+    background-image: linear-gradient(to bottom right, #79b6f2, #6daff0);
+    color: #FFFFFF;
     align-self: flex-end;
     text-align: right;
     margin-bottom: 10px;
@@ -58,8 +58,8 @@ body {
   }
   
   .bot-message {
-    background-color: #fff;
-    color: #000;
+    background-color: #f0f0f0;
+    color: #000000;
     text-align: left;
     margin-bottom: 10px;
     border-radius: 10px 10px 10px 0;
@@ -72,7 +72,7 @@ body {
   }
 
   .bot-message a {
-    color: #007aff;
+    color: #0d6efd;
     text-decoration: underline;
   }
 
@@ -126,7 +126,7 @@ body {
   }
   
   #send-button {
-    background-color: #0D47A1;
+    background-color: #79b6f2;
     color: #fff;
     border: none;
     padding: 12px 20px;
@@ -138,7 +138,7 @@ body {
   }
   
   #send-button:hover {
-    background-color: #0062cc;
+    background-color: #558fcf;
     transform: translateY(-2px);
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
   }
