--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
         var question = $("#question-input").val();
         if (question) {
           var timestamp = new Date().toLocaleTimeString();
-          $("#chat-area").append("<div class='timestamp'><p class='small mb-1 text-muted'>" + timestamp + "</p></div><div class='container message user-message'><div class='row'><div class='w-100'><span>" + question + "<span></div></div></div>");
+          $("#chat-area").append("<div container class='message-container'><div class='row'><div class='col timestamp'><p class='small mb-1 text-muted'>" + timestamp + "</p></div></div><div class='row user-message'><div class='col'><span>" + question + "<span></div></div></div>");
           $("#question-input").val("");
           $("#chat-area").scrollTop($("#chat-area").prop("scrollHeight"));
           $("#loading-indicator").show();
@@ -35,11 +35,9 @@
                   var timestamp = new Date().toLocaleTimeString();
                   $("#typing-indicator").html("");
                   var response = data.response.replace(/\n/g, "<br>");
-                  if (response) {
-                    $("#chat-area").append("<div class='bot-timestamp'><p class='small mb-1 text-muted'>" + timestamp + "</p></div><div class='container message bot-message'><div class='row'><div class='w-100'><span>" + response.replace(/\n/g, "<br><br>").replace(/(https?:\/\/[^\s]+)/g, "<a href='$1' target='_blank'>$1</a>") + "<span></div></div></div>");
-                    $("#chat-area").scrollTop($("#chat-area").prop("scrollHeight"));
-                    $("#loading-indicator").hide();
-                  }
+                  $("#chat-area").append("<div container class='message-container'><div class='row'><div class='col bot-timestamp'><p class='small mb-1 text-muted'>" + timestamp + "</p></div></div><div class='row bot-message'><div class='col'><span>" + response.replace(/\n/g, "<br><br>").replace(/(https?:\/\/[^\s]+)/g, "<a href='$1' target='_blank'>$1</a>") + "<span></div></div></div>");
+                  $("#chat-area").scrollTop($("#chat-area").prop("scrollHeight"));
+                  $("#loading-indicator").hide();  
                 }
               }, typingSpeed);
 
