--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,6 @@
                   var response = data.response.replace(/\n/g, "<br>");
                   if (response) {
                       $("#chat-area").append("<div class='bot-timestamp'><p class='small mb-1 text-muted'>" + timestamp + "</p></div><div class='container message bot-message'><div class='row'><div class='w-100'><span>" + response.replace(/\n/g, "<br><br>").replace(/(https?:\/\/[^\s]+)/g, "<a href='$1' target='_blank'>$1</a>") + "<span></div></div></div>");
-                      $("#chat-area").append("<div class='timestamp'><p class='small mb-1 text-muted'>" + timestamp + "</p></div><div class='container message user-message'><div class='row'><div class='w-100'><span>" + question + "<span></div></div></div>");
                       $("#chat-area").scrollTop($("#chat-area").prop("scrollHeight"));
                       $("#loading-indicator").hide();
                   }
@@ -53,10 +52,12 @@
         }
       }
 
+
       // Send the user's question when they press Enter in the text input field
       $("#question-input").keydown(function(event) {
         if (event.keyCode == 13) {
           sendQuestion();
+          $("#question-input").val("");
           return false;
         }
       });
